syntax = "proto3";
import "finance_prod.proto";

option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.userinfo.grpc";
option java_outer_classname = "UserInfoProto";
option objc_class_prefix = "UIP";

service UserInfoService {
    rpc GetUserId (UserIdQuery) returns (UserId) {
    }
    rpc GetUserBankInfo(UserIdOrUUIDQuery) returns (UserBankInfo){
    }
    rpc GenUserProdsFromOrder(FinanceProdInfosQuery) returns (UserProdId){}

    rpc GetUerUUIDByUserId (UserId) returns (UserUUID){}
}

message UserIdQuery {
  string uuid = 1;
  string telphone = 2;
  string pid = 3;
}

message UserId{
  int64 userId = 1;
}

message UserUUID{
  string userUUID = 1;
}

message UserIdOrUUIDQuery{
  int64 userId = 1;
  string uuid = 2;
}

message UserBankInfo{
  int64 userId = 1;
  string uuid = 2;
  string userName = 3;
  string userPid = 4;
  string cellphone = 5;
  repeated string cardNumbers = 6;
}


message FinanceProdInfosQuery{
  int64 userId = 1; //用戶ID
  repeated FinanceProdInfo prodList = 2; //产品成分List
}
message UserProdId{
  int64 user_prod_id = 1;//用户理财产品ID
}

